infrastructure/k8s/userservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: kriat/userservice:preview
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aks-secret-provider"
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
  labels:
    app: userservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8080
  selector:
    app: userservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /userservice/*
            pathType: Prefix
            backend:
              service:
                name: userservice-service
                port:
                  number: 8081
